# cpp-project-template

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ctest.yml  release.yml
includes/: args.hpp  my.hpp
includes/Log/: logger.hpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/Date/: CMakeLists.txt  Date.cpp
src/Log/: CMakeLists.txt  Logger.cpp
src/Log/include/: logger.hpp
src/Parser/: CMakeLists.txt  Parser.cpp
src/Parser/include/: parser.hpp
src/Parser/pal_bridge/: palfactory.cpp  palfactory.hpp
src/pal/: ifactory.hpp  iparser.hpp
tests/: CMakeLists.txt
tests/Log/: CMakeLists.txt  LogTest.cpp
tests/Log/include/: LoggerTest.hpp
tests/Parser/: CMakeLists.txt  ParserTest.cpp
tests/Parser/include/: parserTest.hpp
tests/includes/: LoggerTest.hpp
